--- a/CrystalBall/src/main/res/layout/activity_main.xml
+++ b/CrystalBall/src/main/res/layout/activity_main.xml
@@ -16,20 +16,6 @@
         android:src="@drawable/ball01"
         android:scaleType="fitXY" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/answerLabel"
-        android:layout_gravity="center"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="32sp"
-        android:gravity="center_horizontal"
-        android:textColor="@android:color/white"
-        android:shadowColor="@android:color/white"
-        android:shadowRadius="10"
-        android:singleLine="false" />
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,5 +30,41 @@
         android:typeface="serif"
         android:textStyle="bold|italic"
         android:textColor="#3f0f7f" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:weightSum="1">
+
+        <View
+            android:id="@+id/view1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.2" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/answerLabel"
+            android:layout_gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="32sp"
+            android:gravity="center_horizontal"
+            android:textColor="@android:color/white"
+            android:shadowColor="@android:color/white"
+            android:shadowRadius="10"
+            android:singleLine="false"
+            android:layout_weight="0.6" />
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.2" />
+
+    </LinearLayout>
 
 </RelativeLayout>
